--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="jquery-3.6.0.min.js"></script>
 	<script type="text/javascript" src="funcoes.js"></script>
 	<link rel="stylesheet" href="estilo.css" type="text/css"/>
+	<link rel="stylesheet" href="w3.css">
+	<link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
-	<form id="frmCadastro">
-		<ul>
-			<li>
+	<div class="w3-modal" id="modal">
+		<div class="w3-modal-content">
+			<div class="w3-bar w3-blue">
+				<span class="w3-bar-item">Cadastro</span>
+				<span class="w3-bar-item w3-button w3-red w3-right" onclick="$('#modal').slideUp()">&times;</span>
+			</div>
+			<form id="frmCadastro" class="w3-padding">
 				<label for="txtCodigo">Código:</label>
-				<input type="text" id="txtCodigo"/>
-			</li>
-			<li>
+				<input class="w3-input" type="text" id="txtCodigo"/>
 				<label for="txtNome">Nome:</label>
-				<input type="text" id="txtNome"/>
-			</li>
-			<li>
+				<input class="w3-input" type="text" id="txtNome"/>
 				<label for="txtTelefone">Telefone:</label>
-				<input type="text" id="txtTelefone"/>
-			</li>
-			<li>
+				<input class="w3-input" type="text" id="txtTelefone"/>
 				<label for="txtEmail">Email:</label>
-				<input type="text" id="txtEmail"/>
-			</li>
-			<li>
-				<input type="submit" value="Salvar" id="btnSalvar"/>
-			</li>
-		</ul>
-	</form>
-
-	<table id="tblListar">
-
-	</table>
+				<input class="w3-input" type="text" id="txtEmail"/>
+				<input class="w3-button w3-blue w3-round" type="submit" value="Salvar" id="btnSalvar"/>
+			</form>
+		</div>
+	</div>
+	<button class="w3-button w3-round w3-blue" onclick="$('#modal').slideDown()">Cadastrar</button>
+	<div class="w3-responsive"><table id="tblListar" class="w3-table-all"></table></div>
 </body>
 </html>
